--- a/package.json
+++ b/package.json
@@ -13,10 +13,14 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.1.0",
     "autoprefixer": "^10.4.20",
+    "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "dotenv": "^16.4.5",
     "framer-motion": "^11.5.4",
     "lucide-react": "^0.441.0",
+    "mongodb": "^6.9.0",
+    "mongoose": "^8.6.2",
     "next": "14.2.11",
     "react": "^18",
     "react-dom": "^18",
