--- a/package.json
+++ b/package.json
@@ -20,19 +20,22 @@
     "clsx": "^2.1.1",
     "connect-mongo": "^5.1.0",
     "connect-mongodb-session": "^5.0.0",
+    "cookie": "^0.6.0",
     "dotenv": "^16.4.5",
     "express-session": "^1.18.0",
     "framer-motion": "^11.5.4",
     "iron-session": "^8.0.3",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.441.0",
     "mongodb": "^6.9.0",
     "mongoose": "^8.6.2",
-    "next": "14.2.11",
+    "next": "^14.2.13",
     "next-iron-session": "^4.2.0",
     "next-session": "^4.0.5",
     "react": "^18",
     "react-dom": "^18",
     "react-router-dom": "^6.26.2",
+    "skeleton": "^0.1.2",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7"
   },
