--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "next": "^14.2.13",
     "next-iron-session": "^4.2.0",
     "next-session": "^4.0.5",
+    "otp-generator": "^4.0.1",
     "react": "^18",
     "react-dom": "^18",
     "react-router-dom": "^6.26.2",
