--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest"
   },
   "dependencies": {
     "@radix-ui/react-checkbox": "^1.1.1",
@@ -22,6 +23,7 @@
     "connect-mongodb-session": "^5.0.0",
     "cookie": "^0.6.0",
     "dotenv": "^16.4.5",
+    "express": "^4.21.0",
     "express-session": "^1.18.0",
     "framer-motion": "^11.5.4",
     "iron-session": "^8.0.3",
@@ -41,9 +43,16 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@babel/core": "^7.25.2",
+    "@babel/preset-env": "^7.25.4",
+    "@babel/preset-react": "^7.24.7",
+    "babel-jest": "^29.7.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.11",
+    "glob": "^11.0.0",
+    "jest": "^29.7.0",
     "postcss": "^8.4.47",
+    "supertest": "^7.0.0",
     "tailwindcss": "^3.4.11"
   }
 }
