--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
   "dependencies": {
     "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@vercel/blob": "^0.24.0",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.7",
+    "badge-maker": "^4.0.0",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "client": "file:",
@@ -26,11 +29,14 @@
     "express": "^4.21.0",
     "express-session": "^1.18.0",
     "framer-motion": "^11.5.4",
+    "gridfs-stream": "^1.1.1",
     "iron-session": "^8.0.3",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.441.0",
     "mongodb": "^6.9.0",
-    "mongoose": "^8.6.2",
+    "mongoose": "^8.6.3",
+    "multer": "^1.4.4",
+    "multer-gridfs-storage": "^5.0.2",
     "next": "^14.2.13",
     "next-iron-session": "^4.2.0",
     "next-session": "^4.0.5",
