--- a/package.json
+++ b/package.json
@@ -14,20 +14,22 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-switch": "^1.1.1",
     "@vercel/blob": "^0.24.0",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.7",
     "badge-maker": "^4.0.0",
     "bcrypt": "^5.1.1",
+    "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.0",
     "client": "file:",
     "clsx": "^2.1.1",
-    "connect-mongo": "^5.1.0",
+    "connect-mongo": "^4.6.0",
     "connect-mongodb-session": "^5.0.0",
     "cookie": "^0.6.0",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
-    "express-session": "^1.18.0",
+    "express-session": "^1.0.0",
     "framer-motion": "^11.5.4",
     "gridfs-stream": "^1.1.1",
     "iron-session": "^8.0.3",
