--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "connect-mongodb-session": "^5.0.0",
     "cookie": "^0.7.1",
     "dotenv": "^16.4.5",
-    "express": "^5.0.0",
+    "express": "^4.17.3",
     "framer-motion": "^11.11.1",
     "gridfs-stream": "^1.1.1",
     "iron-session": "^8.0.3",
@@ -36,7 +36,7 @@
     "mongodb": "^6.9.0",
     "mongoose": "^8.7.0",
     "multer-gridfs-storage": "^1.3.0",
-    "next": "^14.2.14", 
+    "next": "^14.2.14",
     "otp-generator": "^4.0.1",
     "react": "^18",
     "react-dom": "^18",
@@ -50,8 +50,8 @@
     "@babel/preset-env": "^7.25.7",
     "@babel/preset-react": "^7.25.7",
     "babel-jest": "^29.7.0",
-    "eslint": "^9",
-    "eslint-config-next": "14.2.14",
+    "eslint": "^8.0.0",
+    "eslint-config-next": "^14.2.14",
     "glob": "^11.0.0",
     "jest": "^29.7.0",
     "postcss": "^8.4.47",
