--- a/package.json
+++ b/package.json
@@ -49,10 +49,12 @@
     "@babel/core": "^7.25.7",
     "@babel/preset-env": "^7.25.7",
     "@babel/preset-react": "^7.25.7",
+    "@babel/preset-typescript": "^7.25.7",
     "babel-jest": "^29.7.0",
     "eslint": "^8.57.1",
     "eslint-config-next": "^14.2.14",
     "glob": "^11.0.0",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
     "postcss": "^8.4.47",
     "supertest": "^7.0.0",
