--- a/package.json
+++ b/package.json
@@ -27,6 +27,10 @@
     "connect-mongodb-session": "^5.0.0",
     "cookie": "^0.7.1",
     "dotenv": "^16.4.5",
+    "expo-constants": "^16.0.2",
+    "expo-linking": "^6.3.1",
+    "expo-router": "^3.5.23",
+    "expo-status-bar": "^1.12.1",
     "express": "^4.17.3",
     "framer-motion": "^11.11.1",
     "gridfs-stream": "^1.1.1",
@@ -40,6 +44,8 @@
     "otp-generator": "^4.0.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-native-safe-area-context": "^4.11.0",
+    "react-native-screens": "^3.34.0",
     "react-router-dom": "^6.26.2",
     "skeleton": "^0.1.2",
     "tailwind-merge": "^2.5.3",
