Improved history and order details page. Also added the QR code functionality and modified order success page

--- a/package.json
+++ b/package.json
@@ -17,44 +17,24 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-switch": "^1.1.1",
     "@vercel/blob": "^0.24.1",
-    "autoprefixer": "^10.4.20",
     "axios": "^1.7.7",
-    "badge-maker": "^4.0.0",
     "bcrypt": "^5.1.1",
     "canvas-confetti": "^1.9.3",
-    "chromedriver": "^129.0.4",
     "class-variance-authority": "^0.7.0",
     "client": "file:",
     "clsx": "^2.1.1",
-    "connect-mongodb-session": "^5.0.0",
-    "cookie": "^0.7.1",
-    "dotenv": "^16.4.5",
-    "expo-constants": "^16.0.2",
-    "expo-linking": "^6.3.1",
-    "expo-router": "^3.5.23",
-    "expo-status-bar": "^1.12.1",
-    "express": "^4.17.3",
     "framer-motion": "^11.11.1",
-    "gridfs-stream": "^1.1.1",
     "iron-session": "^8.0.3",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.447.0",
-    "mongodb": "^6.9.0",
     "mongoose": "^8.7.0",
-    "multer-gridfs-storage": "^5.0.2",
     "next": "^14.2.14",
     "otp-generator": "^4.0.1",
-    "puppeteer": "^23.5.3",
+    "qrcode": "^1.5.4",
     "react": "^18",
     "react-dom": "^18",
-    "react-native-safe-area-context": "^4.11.0",
-    "react-native-screens": "^3.34.0",
-    "react-router-dom": "^6.26.2",
-    "selenium-webdriver": "^4.25.0",
-    "skeleton": "^0.1.2",
     "tailwind-merge": "^2.5.3",
-    "tailwindcss-animate": "^1.0.7",
-    "vercel": "^37.8.0"
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.25.7",
