--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-switch": "^1.1.1",
     "@radix-ui/react-toast": "^1.2.2",
+    "@vercel/analytics": "^1.3.1",
     "@vercel/blob": "^0.24.1",
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
