--- a/package.json
+++ b/package.json
@@ -43,12 +43,15 @@
     "@babel/preset-env": "^7.25.7",
     "@babel/preset-react": "^7.25.7",
     "@babel/preset-typescript": "^7.25.7",
+    "@testing-library/jest-dom": "^6.5.0",
+    "@testing-library/react": "^16.0.1",
     "babel-jest": "^29.7.0",
     "eslint": "^8.57.1",
     "eslint-config-next": "^14.2.14",
     "glob": "^11.0.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8.4.47",
     "supertest": "^7.0.0",
     "tailwindcss": "^3.4.13"
