--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@radix-ui/react-toast": "^1.2.2",
     "@vercel/analytics": "^1.3.1",
     "@vercel/blob": "^0.24.1",
+    "@vercel/speed-insights": "^1.0.12",
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "canvas-confetti": "^1.9.3",
